--- a/Website.html
+++ b/Website.html
@@ -109,7 +109,7 @@
                                       mainContainer.appendChild(backbutton);
 
                                     })
-                                    .catch(error => console.error('Error  fetching comments:', error));
+                                    .catch(error => console.error('Error is  fetching comments:', error));
                             });
 
                             card.appendChild(button);
